syntax = "proto2";

package holepunch.pb;

option go_package = "github.com/libp2p/go-libp2p/p2p/protocol/holepunch/pb";

// spec: https://github.com/libp2p/specs/blob/master/relay/DCUtR.md
message HolePunch {
  enum Type {
    CONNECT = 100;
    SYNC = 300;
  }

  // NAT type classification (v2 extension)
  enum NATType {
    NAT_UNKNOWN            = 0;
    NAT_OPEN               = 1;
    NAT_CONE               = 2;
    NAT_SYMMETRIC_EASY_INC = 3;
    NAT_SYMMETRIC_EASY_DEC = 4;
    NAT_SYMMETRIC_HARD     = 5;
  }

  required Type type = 1;
  repeated bytes ObsAddrs = 2;

  // v2 extensions (optional â€” ignored by v1 peers)
  optional NATType natType    = 3;  // sender's NAT classification
  repeated bytes   PunchAddrs = 4;  // punch socket's public address (STUN-queried)
  optional uint32  publicPort = 5;  // latest observed port (for EasySym prediction)
  optional uint32  tid        = 6;  // punch transaction ID (in SYNC message)
}
